# Kea_SD22W_System_Integration_2022_Autumn

10._CORS/: index.html
10._CORS/node/: app.js  package.json
10._CORS/python/: main.py  pyproject.toml
11._WebSockets/node/: app.js  package-lock.json  package.json
11._WebSockets/node/public/: index.html
11._WebSockets/node_plain_websockets/: index.html  package-lock.json  package.json  server.js
11._WebSockets/python/: main.py  pyproject.toml
12._Multipart_Forms/: formspage.html
12._Multipart_Forms/node/: app.js  package-lock.json  package.json
12._Multipart_Forms/python/: main.py  pyproject.toml
13._Image_encoding/: index.html
14._Redis_Task_Queues/: pyproject.toml  scheduler.py  scheduler_util.py  worker.py
15._Serverless_FastAPI/FastAPIServerless/: __init__.py  function.json
16._Redis_Labs/: main.py  main_redis_om.py  pyproject.toml
17._Webscraping/1._Datascraping/: main.py  pyproject.toml
17._Webscraping/2._Webcrawler/: basic_example.py  main.py  pyproject.toml
17._Webscraping/3._Scrapy_basic/: data.json  pyproject.toml
17._Webscraping/4._Scrapy_WikiSpider/: howto.txt  pyproject.toml
17._Webscraping/4._Scrapy_WikiSpider/wikicrawler/: output.json
17._Webscraping/4._Scrapy_WikiSpider/wikicrawler/wikicrawler/: settings.py
17._Webscraping/4._Scrapy_WikiSpider/wikicrawler/wikicrawler/spiders/: WikiPageSpider.py
18._databases/: zoo_mro_docs.html
18._databases/node/: montypython.db  package-lock.json  package.json
18._databases/node/database/: connection.js  sqlite_ddl.js  sqlite_dml.js
18._databases/python/: main.py  montypython.db  pyproject.toml
18._databases/python/database/: get_projects.py  sqlite_ddl.py  sqlite_dml.py
19._graphql/: app_movies.js  app_simple.js  github_graphql_example.txt
20._RSS/: feedexample.xml
20._RSS/node/: about.txt  main.js  package-lock.json  package.json
20._RSS/python/: myfeedparser.py  pyproject.toml
9._Server-sent_events/node/: app.js
9._Server-sent_events/node/public/: index.html
9._Server-sent_events/python/: main.py  pyproject.toml
9._Server-sent_events/python/templates/: index.html
api/FirstFunctionFromVsCode/: __init__.py
