[tool.poetry]
name = "14-redis-task-queues"
version = "0.1.0"
description = ""
authors = ["Anders Latif <andl@kea.dk>"]
readme = "README.md"
packages = [{include = "14"}]

[tool.poetry.dependencies]
python = "^3.11"
redis = "^4.3.4"
rq = "^1.11.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
