[tool.poetry]
name = "4-scrapy-wikispider"
version = "0.1.0"
description = ""
authors = ["Anders Latif <andl@kea.dk>"]
readme = "README.md"
packages = [{include = "4"}]

[tool.poetry.dependencies]
python = "^3.11"
scrapy = "^2.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
