[tool.poetry]
name = "python"
version = "0.1.0"
description = ""
authors = ["Anders Latif <andl@kea.dk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
beautifulsoup4 = "^4.11.1"
requests = "^2.28.1"
lxml = "^4.9.1"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
