[tool.poetry]
name = "python-rss-feed-parsing"
version = "0.1.0"
description = ""
authors = ["Anders Latif <andl@kea.dk>"]

[tool.poetry.dependencies]
python = "^3.9"
feedparser = "^6.0.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
