[tool.poetry]
name = "server-sent_events"
version = "0.1.0"
description = ""
authors = ["Anders Latif <andl@kea.dk>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.79.0"
uvicorn = "^0.18.2"
Jinja2 = "^3.1.2"
asyncio = "^3.4.3"

[tool.poetry.dev-dependencies]
sse-starlette = "^1.1.6"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
